# soundtouch-ffi

./: Cargo.toml  README.md  build.rs  wrapper.hpp
soundtouch-2_3_2/include/: BPMDetect.h
src/: lib.rs
