[package]
authors = ["Cyanism <github@cyan.slmail.me>"]
categories = ["external-ffi-bindings", "multimedia::audio", "multimedia::audio::sound-processing"]
description = "Rust bindings to the SoundTouch C++ audio library."
edition = "2021"
license = "LGPL-2.1"
keywords = ["soundtouch", "audio", "music", "audio-processing", "audio-library"]
name = "soundtouch-ffi"
readme = "README.md"
repository = "https://github.com/Cyanistic/soundtouch-ffi"
version = "0.1.0"
links = "SoundTouch"

[dependencies.libc]
version = "0.2"
default-features = false

[build-dependencies.cc]
version = "1.0"
features = ["parallel"]
